--- a/Sjuklöner/Views/Home/Index.cshtml
+++ b/Sjuklöner/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@*@model Sjuklöner.Viewmodels.AssistantClaimVM*@
 
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Administration";
 }
 
 @using (Html.BeginForm())
