--- a/Sjuklöner/Views/Account/NewAdmOff.cshtml
+++ b/Sjuklöner/Views/Account/NewAdmOff.cshtml
@@ -28,10 +28,22 @@
             @Html.EditorFor(m => m.SSN, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
+    /*<div class="form-group">
         @Html.LabelFor(m => m.ConfirmSSN, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.EditorFor(m => m.ConfirmSSN, new { @class = "form-control" })
+        </div>
+    </div>*/
+    <div class="form-group">
+        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
