--- a/Sjuklöner/Views/Account/Register.cshtml
+++ b/Sjuklöner/Views/Account/Register.cshtml
@@ -146,7 +146,7 @@
         <div>
             @Html.LabelFor(model => model.CollectiveAgreements, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
             <div class="col-md-4">
-                @Html.DropDownListFor(model => model.SelectedCollectiveAgreementId, new SelectList(Model.CollectiveAgreements, "Value", "Text", Model.SelectedCollectiveAgreementId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.SelectedCollectiveAgreementId, new SelectList(Model.CollectiveAgreements, "Value", "Text", Model.SelectedCollectiveAgreementId), new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CollectiveAgreements, "", new { @class = "text-danger font-size-11" })
             </div>
         </div>
