--- a/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
@@ -1386,12 +1386,12 @@
 </div>
 
 
-@*<div class="form-horizontal">
+<div class="form-horizontal">
 
             @if (Model.CompletionStage >= 4)
             {
                 <div class="row">
-                    @*<div class="col col-md-2">
+                    <div class="col col-md-2">
                         </div>
                     <div class="col col-md-12 form-group-div-frame">
                         <div class="row form-group-heading">
@@ -1470,7 +1470,7 @@
 
 
 
-    <div class="form-horizontal">
+    @*<div class="form-horizontal">
         @if (Model.CompletionStage > 4)
         {
             <div class="row">
@@ -1501,7 +1501,7 @@
                 </div>
             </div>
         }
-    </div>*@
+    </div>
 @*</body>*@
 <script type='text/javascript'>
 
