--- a/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
@@ -841,6 +841,28 @@
                             <div class="col col-md-4">
                                 <div class="row">
                                     <div class="col col-md-12 control-label-left-small-padding">
+                                        Sjuklön (enbart för arbetstimmar som överstiger 8):
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col col-md-6">
+                                <div class="row">
+                                    <div class="col col-md-8">
+                                        @Html.DisplayFor(m => m.ClaimCalculations[i].SalaryCalcQD)
+                                    </div>
+                                    <div class="col col-md-1">
+                                        =
+                                    </div>
+                                    <div class="col col-md-3 text-right">
+                                        @Html.DisplayFor(m => m.ClaimCalculations[i].SalaryQD) Kr
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col col-md-4">
+                                <div class="row">
+                                    <div class="col col-md-12 control-label-left-small-padding">
                                         Semesterersättning:
                                     </div>
                                 </div>
@@ -957,7 +979,7 @@
                             <div class="col col-md-8">
                                 <div class="row">
                                     <div class="col col-md-12 col-small-left-padding2 bold-16">
-                                        OB- och jour-ersättningar enligt kollektivavtal
+                                        OB- och jour-ersättningar enligt kollektivavtalet @Model.CollectiveAgreement 
                                     </div>
                                 </div>
                             </div>
