--- a/Sjuklöner/Views/CareCompanies/Index.cshtml
+++ b/Sjuklöner/Views/CareCompanies/Index.cshtml
@@ -24,60 +24,78 @@ else
     <hr class="claim-divider" />
     <br />
     <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CareCompanyList[0].CompanyName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CareCompanyList[0].OrganisationNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CareCompanyList[0].StreetAddress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CareCompanyList[0].Postcode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CareCompanyList[0].City)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CareCompanyList[0].AccountNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CareCompanyList[0].CompanyPhoneNumber)
-        </th>
-        <th></th>
-    </tr>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.CareCompanyList[0].CompanyName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CareCompanyList[0].IsActive)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CareCompanyList[0].OrganisationNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CareCompanyList[0].StreetAddress)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CareCompanyList[0].Postcode)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CareCompanyList[0].City)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CareCompanyList[0].AccountNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CareCompanyList[0].CompanyPhoneNumber)
+            </th>
+            <th></th>
+        </tr>
     @foreach (var item in Model.CareCompanyList)
     {
-    <tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CompanyName)
+            </td>
+            @if (item.IsActive)
+    {
         <td>
-            @Html.DisplayFor(modelItem => item.CompanyName)
+            Aktivt bolag
         </td>
+}
+else
+{
         <td>
-            @Html.DisplayFor(modelItem => item.OrganisationNumber)
+            Passivt bolag
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StreetAddress)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Postcode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccountNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CompanyPhoneNumber)
-        </td>
-        <td>
-            @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
-        </td>   
-    </tr>
+}
+            <td>
+                @Html.DisplayFor(modelItem => item.OrganisationNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StreetAddress)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Postcode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AccountNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CompanyPhoneNumber)
+            </td>
+            @if (item.IsActive)
+            {
+            <td>
+                @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })
+            </td>
+            }
+        </tr>
     }
 </table>
 }
