--- a/Sjuklöner/Views/Account/EditAdmOff.cshtml
+++ b/Sjuklöner/Views/Account/EditAdmOff.cshtml
@@ -4,15 +4,18 @@
 
     ViewBag.Title = "View";
 }
+<div class="row">
+    <p class="page-header7 col col-md-offset-2 col-md-10">Uppdatera handläggare</p>
+</div>
+<div class="row">
+    <p class="col col-md-offset-2 col-md-10">Uppgifterna används vid ansökan om sjuklöneersättning</p>
+</div>
+<hr class="claim-divider" />
 @using (Html.BeginForm("EditAdmOff", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.HiddenFor(model => model.Id)
     @Html.AntiForgeryToken()
-    <div class="row">
-        <p class="col col-md-2"></p>
-        <p class="page-header7 col col-md-10">Uppdatera handläggare</p>
-    </div>
-    <hr class="claim-divider" />
+    @*Html.ValidationSummary("", new { @class = "text-danger font-size-11" })*@    
     <div class="form-group">
         @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -55,19 +58,19 @@
         </div>
     </div>
     @*<div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger font-size-11" })
+            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.PasswordFor(m => m.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger font-size-11" })
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger font-size-11" })
-        </div>
-    </div>*@
+        <div class="form-group">
+            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.PasswordFor(m => m.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger font-size-11" })
+            </div>
+        </div>*@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-1">
             <input type="submit" class="btn btn-primary btn-primary-small" value="Spara" />
